# zcash-swift-wallet-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  Package.resolved  Package.swift  README.md  ZcashLightClientKit.xctestplan  zcash-swift-wallet-sdk-consolidation-plan.md
.github/workflows/: build-ffi.yml  rust-lint.yml  swift.yml
BuildSupport/: LocalPackages-Package.swift  Makefile
BuildSupport/FFIBuilder.xcodeproj/: project.pbxproj
Example/ZcashLightClientSample/ZcashLightClientSample.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Scripts/: init-local-ffi.sh  prepare-fork-release.sh  prepare-release.sh  publish-fork-release.sh  rebuild-local-ffi.sh  release.sh  reset-local-ffi.sh
Sources/ZcashLightClientKit/: Broadcaster.swift  ClosureSynchronizer.swift  CombineSynchronizer.swift  Initializer.swift  Synchronizer.swift
Sources/ZcashLightClientKit/Block/: CompactBlockProcessor.swift
Sources/ZcashLightClientKit/Block/Actions/: TxResubmissionAction.swift
Sources/ZcashLightClientKit/Block/FilesystemStorage/: FSCompactBlockRepository.swift
Sources/ZcashLightClientKit/DAO/: TransactionDao.swift
Sources/ZcashLightClientKit/Error/: ZcashError.swift  ZcashErrorCode.swift  ZcashErrorCodeDefinition.swift
Sources/ZcashLightClientKit/Model/: Eip681TransactionRequest.swift  Proposal.swift  ScanRange.swift  WalletTypes.swift
Sources/ZcashLightClientKit/Modules/Service/: LightWalletService.swift
Sources/ZcashLightClientKit/Modules/Service/GRPC/: LightWalletGRPCService.swift
Sources/ZcashLightClientKit/Modules/Service/Tor/: LightWalletGRPCServiceOverTor.swift
Sources/ZcashLightClientKit/Repository/: CompactBlockRepository.swift  TransactionRepository.swift
Sources/ZcashLightClientKit/Resources/checkpoints/mainnet/: 3172500.json  3175000.json  3177500.json  3182500.json  3185000.json  3187500.json  3192500.json  3195000.json  3197500.json  3202500.json  3205000.json  3207500.json  3212500.json  3215000.json  3217500.json  3222500.json  3225000.json  3227500.json  3232500.json  3235000.json  3237500.json  3242500.json  3245000.json  3247500.json
Sources/ZcashLightClientKit/Resources/checkpoints/testnet/: 3740000.json  3750000.json  3760000.json  3770000.json  3780000.json  3790000.json  3800000.json  3810000.json  3820000.json  3830000.json  3840000.json  3850000.json  3860000.json
Sources/ZcashLightClientKit/Rust/: DbHandle.swift  ZcashEip681Backend.swift  ZcashKeyDerivationBackend.swift  ZcashKeyDerivationBackendWelding.swift  ZcashRustBackend.swift  ZcashRustBackendWelding.swift
Sources/ZcashLightClientKit/Rust/Spendability/: SpendabilityBackend.swift  SpendabilityTypes.swift
Sources/ZcashLightClientKit/Rust/Voting/: PirSnapshotResolver.swift  VotingConstants.swift  VotingRustBackend.swift  VotingTypes.swift
Sources/ZcashLightClientKit/Synchronizer/: ClosureSDKSynchronizer.swift  CombineSDKSynchronizer.swift  Dependencies.swift  Placeholders.swift  SDKBroadcaster.swift  SDKSynchronizer.swift
Sources/ZcashLightClientKit/Tool/: DerivationTool.swift
Sources/ZcashLightClientKit/Tor/: TorClient.swift
Sources/ZcashLightClientKit/Transaction/: AutomaticTxResubmissionGuard.swift  PendingSubmitPlanStore.swift  SubmitPlanExecutor.swift  TransactionEncoder.swift  WalletTransactionEncoder.swift
Sources/ZcashLightClientKit/Utils/: SDKFlags.swift
Tests/DarksideTests/: BlockDownloaderTests.swift  TransactionEnhancementTests.swift
Tests/NetworkTests/: BlockStreamingTest.swift  CompactBlockProcessorTests.swift  CompactBlockReorgTests.swift  DownloadTests.swift
Tests/OfflineTests/: AutomaticTxResubmissionGuardTests.swift  BroadcasterTests.swift  CompactBlockRepositoryTests.swift  Eip681Tests.swift  FsBlockStorageTests.swift  PendingSubmitPlanStoreTests.swift  PirSnapshotResolverTests.swift  SpendabilityTypesTests.swift  SynchronizerOfflineTests.swift  TransactionRepositoryTests.swift  VotingRustBackendTests.swift  WalletTests.swift  ZcashErrorLocalizedTests.swift  ZcashRustBackendTests.swift
Tests/PerformanceTests/: SynchronizerTests.swift
Tests/TestUtils/: DarkSideWalletService.swift  FakeService.swift  FakeStorage.swift  Stubs.swift  TestDbBuilder.swift  Tests+Utils.swift
Tests/TestUtils/Sourcery/: AutoMockable.stencil  AutoMockable.swift
Tests/TestUtils/Sourcery/GeneratedMocks/: AutoMockable.generated.swift
ZcashSDK.xcworkspace/: contents.xcworkspacedata
ZcashSDK.xcworkspace/xcshareddata/xcschemes/: ZcashLightClientKit.xcscheme
docs/: LOCAL_DEVELOPMENT.md  README.md  ci.md  type-safe-db-handle-proposal.md
rust/: CHANGELOG.md  build.rs
rust/src/: derivation.rs  eip681.rs  ffi.rs  lib.rs  spendability.rs  tor.rs  voting.rs
rust/src/voting/: constants.rs  db.rs  delegation.rs  ffi_types.rs  helpers.rs  json.rs  notes.rs  progress.rs  recovery.rs  rounds.rs  share_tracking.rs  tree.rs  util.rs  vote.rs
