[package]
name = "libzcashlc"
version = "2.4.6"
authors = [
    "Jack Grigg <thestr4d@gmail.com>",
    "Lukas Korba <lukas@tangiblecodes.com>",
    "Kris Nuttycombe<kris@nutty.land>",
    "Francisco Gindre",
]
license = "MIT"
edition = "2024"
rust-version = "1.90"
build = "rust/build.rs"

[dependencies]

# Zcash
orchard = { version = "=0.13.1", features = ["unstable-voting-circuits"] }
sapling = { package = "sapling-crypto", version = "0.7", default-features = false }
transparent = { package = "zcash_transparent", version = "0.7", default-features = false }
zcash_address = { version = "0.11" }
zcash_client_backend = { version = "0.21", features = [
    "lightwalletd-tonic-tls-webpki-roots",
    "orchard",
    "pczt",
    "tor",
    "transparent-inputs",
    "unstable",
] }
zcash_client_sqlite = { version = "0.19", features = ["orchard", "transparent-inputs", "unstable", "serde"] }
zcash_note_encryption = "0.4.1"
zcash_primitives = "0.27"
zcash_proofs = "0.26"
zcash_protocol = "0.8"
zcash_script = "0.4"
zip32 = "0.2"
pczt = { version = "0.5", features = ["prover"] }

# EIP-681
eip681 = "0.1.0"

# Infrastructure
prost = "0.14"
rusqlite = "0.37"
secrecy = "0.8"
rand = "0.8"
nonempty = "0.11"

# FFI
anyhow = "1.0"
ffi_helpers = "0.3"
uuid = "1.1"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
bytes = "1"
http = "1"
http-body-util = "0.1"

# Initialization
cfg-if = "1.0"
rayon = "1.7"

# lightwalletd
tonic = "0.14"

# Logging
log-panics = "2.0"
once_cell = "1.0"
sharded-slab = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Tor
fs-mistrust = "0.12"
tor-rtcompat = "0.35"
rust_decimal = { version = "1", default-features = false, features = ["c-repr"] }
# - The "static" feature is required for the "compression" default feature of arti-client.
xz2 = { version = "0.1", features = ["static"] }

# Voting — zcash_voting is pinned in `[patch.crates-io]` until librustzcash
# crates.io releases unblock publishing zcash_voting 0.1.1.
zcash_voting = "0.1.1"
voting-circuits = { version = "0.3.1", features = ["share-reveal"] }
zcash_keys = { version = "0.12", features = ["orchard"] }
incrementalmerkletree = { version = "0.8", default-features = false }

[build-dependencies]
bindgen = "0.72"
cbindgen = "0.29"
cc = "1.0"

[lib]
name = "zcashlc"
path = "rust/src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true

[patch.crates-io]
zcash_voting = { git = "https://github.com/valargroup/zcash_voting.git", rev = "3b84836f637ff2d8f9454d1ce20d9aa454f367cd" }
pczt = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
transparent = { package = "zcash_transparent", git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "976efa76ca2195d693f373aeaa201a2c50b6e0ab" }
